# free-ebay

./: .gitignore  README.md  README_NOT_AI.md  RESULT.md  architecture_source.mermaid  check-db-connection.sh  deploy-prod.sh  k8s-cleanup.sh  k8s-deploy.sh  tests.runsettings
.github/: .copilot-instruction.md
AI/EmbeddingService/: Dockerfile  README.md  config.py  grpc_server.py  main.py  pyproject.toml
AI/EmbeddingService/clients/: ollama_client.py
AI/EmbeddingService/protos/: embedding.proto
AI/EmbeddingService/routes/: embed.py
AI/EmbeddingService/tests/e2e/: conftest.py  test_embed_endpoint.py
AI/EmbeddingService/tests/unit/: test_ollama_client.py
AI/UserPreferenceWorker/: README.md  aggregator.py  config.py  consumer.py  cooccurrence.py  main.py  models.py  pyproject.toml
AI/UserPreferenceWorker/tests/: test_aggregator.py  test_consumer.py  test_cooccurrence.py
AI/VectorIndexerWorker/: NOTES.md  README.MD  config.py  consumer.py  docker-compose.yml  embedding_client.py  embedding_pb2.py  embedding_pb2_grpc.py  grpc_embedding_client.py  indexer.py  main.py  models.py  pyproject.toml  qdrant_client.py
AI/VectorIndexerWorker/tests/: conftest.py
AI/VectorIndexerWorker/tests/e2e/: test_full_pipeline.py
AI/VectorIndexerWorker/tests/integration/: test_qdrant_integration.py
AI/VectorIndexerWorker/tests/unit/: test_consumer.py  test_indexer.py  test_qdrant_client.py
Auth/: Auth.sln
Catalog/: KAFKA_RETRY_AND_PARTITION_PAUSE_PLAN.md  README.md  docker-compose.yml
Email/: Email.sln  docker-compose.yml
Gateway/: Gateway.sln  docker-compose.yml
Inventory/: Dockerfile  Inventory.sln  README.md  docker-compose.yml
Order/: ARCHITECTURE_REVIEW.md  Dockerfile  IMPLEMENTATION_GUIDE.md  Order.sln  README.md  docker-compose.yml  order_compensation.mermaid  order_creation.mermaid  saga.mermaid
Payment/: Payment.sln  README.md  docker-compose.yml
User/: User.sln  docker-compose.yml
client/: package.json
contributions/: bounty-1777265354.md  bounty-1777265748.md  (+3 more)
free-ebay/AI/AiSearchService/: README.md  config.py  docker-compose.yml  grpc_server.py  main.py  models.py  pyproject.toml
free-ebay/AI/AiSearchService/Protos/: ai_seach.proto
free-ebay/AI/AiSearchService/client/: es_client.py  llm_query_client.py  qdrant_client.py
free-ebay/AI/AiSearchService/pipeline/: orchestrator.py
free-ebay/AI/AiSearchService/tests/e2e/: test_grpc_e2e.py
free-ebay/AI/AiSearchService/tests/integration/: test_es_integration.py  test_qdrant_integration.py
free-ebay/AI/AiSearchService/tests/unit/: test_es_client.py  test_grpc_servicer.py  test_llm_query_client.py  test_orchestrator.py  test_qdrant_client.py  test_rrf.py
free-ebay/AI/LLMQueryService/: README.md  docker-compose.yml  main.py  models.py  pyproject.toml
free-ebay/AI/LLMQueryService/clients/: ollama_client.py
free-ebay/AI/LLMQueryService/prompts/: query_extraction.txt
free-ebay/AI/LLMQueryService/routes/: parse.py
free-ebay/AI/VectorIndexerWorker/: README.MD  config.py  consumer.py  docker-compose.yml  embedding_client.py  indexer.py  main.py  models.py  pyproject.toml  qdrant_client.py
free-ebay/AI/VectorIndexerWorker/tests/e2e/: test_full_pipeline.py
free-ebay/AI/VectorIndexerWorker/tests/integration/: conftest.py
free-ebay/AI/VectorIndexerWorker/tests/unit/: test_consumer.py  test_indexer.py
(+2822 files in other folders)
