[project]
name = "user-preference-worker"
version = "0.1.0"
description = "Kafka consumer that aggregates user interaction events into preference profiles stored in Redis"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka>=2.13.2",
    "redis>=5.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
