[project]
name = "ai-search-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "grpcio>=1.63.0",
    "grpcio-tools>=1.63.0",
    "qdrant-client>=1.9.0",
    "elasticsearch>=8.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "asgi-lifespan>=2.1",
    "testcontainers[elasticsearch]>=4.9",
    "testcontainers>=4.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
